Email/UserDetails/RoleSelection/AppIcon

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -9,10 +9,32 @@
   "mobile_number" : "Mobile number",
   "already_have_an_account" : "Already have an account? Log in",
   "get_otp" : "Get OTP",
+  "continueText" : "Continue",
   "six_digit_code" : "6-digit code",
   "please_enter_the_code_we_sent_to" : "Please enter the code we’ve sent to ",
   "resend_code_in" : "Resend code in ",
   "resend_code" : "Resend code",
   "search_country" : "Search country",
-  "code_you_have_entered_not_matched" : "Code you have entered doesn’t match"
+  "code_you_have_entered_not_matched" : "Code you have entered doesn’t match",
+  "what_is_your_email" : "What is your email",
+  "enter_your_work_email" : "Enter your work email. We will send you a confirmation code there",
+  "confirm_your_email" : "Confirm your email",
+  "resend_email" : "Resend email",
+  "work_email" : "Work email",
+  "whats_your_name" : "What’s your name",
+  "get_verification_code" : "Get verification code",
+  "enter_your_first_and_last_name" : "Please enter your first name and last name",
+  "first_name" : "First name",
+  "last_name" : "Last name",
+  "we_dont_allow_number" : "We don’t allow numbers for name",
+  "create_password" : "Create password",
+  "password_not_matched" : "Password doesn’t match",
+  "select_your_role" : "Select your role?",
+  "choose_how_you_primarily_interact" : "Choose how you primarily interact with commodities",
+  "buyer" : "Buyer",
+  "enter_password" : "Enter password",
+  "coming_soon" : "COMING SOON",
+  "enter_confirm_password" : "Enter confirm password",
+  "please_set_your_password_and_confirm_password" : "Please set your password and confirm password",
+  "buy_commodities_at_optimal_price" : "Buy commodities at optimal prices for your organization's needs"
 }
