Commodity/Login/ForgotPassword/Changes flow.

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -34,7 +34,30 @@
   "buyer" : "Buyer",
   "enter_password" : "Enter password",
   "coming_soon" : "COMING SOON",
-  "enter_confirm_password" : "Enter confirm password",
+  "enter_confirm_password" : "Confirm password",
+  "update_your_password" : "Update your password",
   "please_set_your_password_and_confirm_password" : "Please set your password and confirm password",
-  "buy_commodities_at_optimal_price" : "Buy commodities at optimal prices for your organization's needs"
+  "buy_commodities_at_optimal_price" : "Buy commodities at optimal prices for your organization's needs",
+  "select_commodity" : "Select Commodity",
+  "email" : "Email",
+  "sent_reset_code" : "Send reset code",
+  "password" : "Password",
+  "forgot_password" : "Forgot password?",
+  "you_have_entered_wrong_password" : "Your have entered a wrong password",
+  "search" : "Search",
+  "selected" : "selected",
+  "select_up_to_five_market" : "Select up to 5 markets",
+  "spot_market" : "Spot markets",
+  "future_market" : "Futures markets",
+  "we_just_want_to_confirm_your_selection" : "we just want to confirm your selection",
+  "we_just_want_to_confirm_you_commodity_selection" : "We just want to confirm you commodity selection as we would optimize the home. You can always add any commodity or exchange afterwards.",
+  "edit" : "Edit",
+  "submit" : "Submit",
+  "commodities" : "Commodities",
+  "connect_support" : "Contact support",
+  "reset_password" : "Reset password",
+  "hang_tight_this_usually_takes_between_5_minutes" : "Hang tight! This usually takes between 5 minutes to an hour, but can take up to 5 hours. Please check back later.",
+  "we_are_verifying_your_account_information" : "we are verifying your account information",
+  "hang_tight_the_verification_is_taking_longer" : "Hang tight! The verification is taking longer than expected. You can wait or contact our support"
+
 }
