--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -5,7 +5,7 @@
   "get_started" : "Get started",
   "log_in" : "Log in",
   "what_is_your_phone_number" : "What’s your phone number?",
-  "enter_your_phone_number_desc" : "Enter your phone number. We will send you a confirmation code there",
+  "enter_your_phone_number_desc" : "Enter your phone number. We will send\nyou a confirmation code there",
   "mobile_number" : "Mobile number",
   "already_have_an_account" : "Already have an account? Log in",
   "get_otp" : "Get OTP",
@@ -17,7 +17,7 @@
   "search_country" : "Search country",
   "code_you_have_entered_not_matched" : "Code you have entered doesn’t match",
   "what_is_your_email" : "What is your email",
-  "enter_your_work_email" : "Enter your work email. We will send you a confirmation code there",
+  "enter_your_work_email" : "Enter your work email. We will send you\na confirmation code there",
   "confirm_your_email" : "Confirm your email",
   "resend_email" : "Resend email",
   "work_email" : "Work email",
@@ -30,7 +30,7 @@
   "create_password" : "Create password",
   "password_not_matched" : "Password doesn’t match",
   "select_your_role" : "Select your role?",
-  "choose_how_you_primarily_interact" : "Choose how you primarily interact with commodities",
+  "choose_how_you_primarily_interact" : "Choose how you primarily interact\nwith commodities",
   "buyer" : "Buyer",
   "enter_password" : "Enter password",
   "coming_soon" : "COMING SOON",
@@ -56,6 +56,14 @@
   "commodities" : "Commodities",
   "connect_support" : "Contact support",
   "reset_password" : "Reset password",
+  "minimum_length_should_be_eight" : "Minimum length should be 8 character(s)",
+  "contains_at_least_one_number" : "Contains at least 1 number",
+  "contains_at_least_one_special_character" : "Contains at least 1 special character",
+  "contains_at_least_one_uppercase_letter" : "Contains at least 1 uppercase letter",
+  "we_dont_allow_numbers_for_name" : "We don’t allow numbers for name",
+  "we_dont_allow_special_characters_for_name" : "We don’t allow special characters for name",
+  "more_messages_goes_here" : "More messages goes here",
+  "mobile_number_should_be_10_digits" : "Mobile number should be 10 digits",
   "hang_tight_this_usually_takes_between_5_minutes" : "Hang tight! This usually takes between 5 minutes to an hour, but can take up to 5 hours. Please check back later.",
   "we_are_verifying_your_account_information" : "we are verifying your account information",
   "hang_tight_the_verification_is_taking_longer" : "Hang tight! The verification is taking longer than expected. You can wait or contact our support"
